--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,8 @@ runs:
   steps:
       - name: Login
         id: login
-        uses: azure/login@v1
+        # from https://github.com/Azure/login/commits/master
+        uses: azure/login@92a5484dfaf04ca78a94597f4f19fea633851fa2
         with:
           client-id: ${{ inputs.client_id }}
           tenant-id: ${{ inputs.tenant_id }}
