--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ runs:
         with:
           path: ${{ inputs.dir }}/.terraform
           # key: terraform-${{ inputs.dir }}-${{ hashFiles('inputs.dir/**.tf') }}
-          key: terraform-${{ inputs.dir }}-${{ hashFiles('{{ inputs.dir }}/**.tf') }}
+          key: terraform-${{ inputs.dir }}-${{ hashFiles('**{{ inputs.dir }}/**.tf') }}
 
       - name: Terraform plan
         shell: bash
