--- a/action.yml
+++ b/action.yml
@@ -35,7 +35,7 @@ runs:
         uses: actions/cache@6fd2d4538ca777f67fccddb233cf1a8ff1339012
         with:
           path: ${{ inputs.dir }}/.terraform
-          key: terraform-${{ inputs.dir }}-${{ github.head_ref }}-${{ github.sha }}
+          key: terraform-${{ inputs.dir }}-${{ github.sha }}
           restore-keys: |
             terraform-${{ inputs.dir }}
 
